--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
 
+    <developers>
+        <developer>
+            <id>chertenokru</id>
+            <name>Vladimir Konkov</name>
+        </developer>
+    </developers>
     <dependencies>
 
         <!-- https://mvnrepository.com/artifact/javax/javaee-api -->
