--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,4 +7,10 @@
     <welcome-file-list>
         <welcome-file>index</welcome-file>
     </welcome-file-list>
+    <context-param>
+        <param-name>PATH_JSP</param-name>
+        <param-value>WEB-INF/JSP/</param-value>
+    </context-param>
+    <
+
 </web-app>
