--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.3.4.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
