--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 
     <context-param>
         <param-name>PATH_JSP</param-name>
-        <param-value>WEB-INF/JSP/</param-value>
+        <param-value>/WEB-INF/JSP/</param-value>
     </context-param>
     <context-param>
         <param-name>SHABLON</param-name>
