--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,7 @@
         <welcome-file>index</welcome-file>
     </welcome-file-list>
 
+
     <context-param>
         <param-name>PATH_JSP</param-name>
         <param-value>/WEB-INF/JSP/</param-value>
@@ -17,6 +18,10 @@
     <context-param>
         <param-name>SHABLON</param-name>
         <param-value>shablon.jsp</param-value>
+    </context-param>
+    <context-param>
+        <param-name>javax.faces.PROJECT_STAGE</param-name>
+        <param-value>Development​</param-value>
     </context-param>
 
     <listener>
