--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.3.4.Final</version>
+            <scope>provided</scope>
+
         </dependency>
 
 
@@ -75,12 +77,6 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
 
 
     </dependencies>
